# snippet-cli

./: Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
resources/: sample.json
src/: main.rs
