[package]
name = "sp"
version = "0.1.0"
authors = ["Alfrheim <1399702+Alfrheim@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to print snippets from visual studio code snippets.json"
readme = "README.md"
repository = "https://github.com/alfrheim/snippet"
keywords = ["cli", "snippet"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
clap = { version = "4.1.4", features = ["derive"] }
dirs = { version = "4.0.0" }

[dev-dependencies]
pretty_assertions = "1.3.0"
